[package]
name = "float"
version = "0.0.1"
authors = ["Jony <jonysy@users.noreply.github.com>"]
keywords = ["mathematics", "numerics"]
categories = ["no-std", "science"]
license = "MIT/Apache-2.0"

[dependencies]
num = "0.1.36"

# temporary
nalgebra = "0.5.1"

[dev-dependencies]
speculate = "0.0.24"
ordered-float = "0.4.0"